devops/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remitmortgage-backend
  labels:
    app: remitmortgage-backend
spec:
  type: ClusterIP
  selector:
    app: remitmortgage-backend
  ports:
    - name: http
      port: 80
      targetPort: http
